# azcam-mont4k

./: .gitignore  README.md  azcam-mont4k.code-workspace  notes.txt  pyproject.toml  readme.md  requirements.txt  setup.py
azcam_mont4k/: __init__.py  azcam_mont4k_console.py  azcam_mont4k_server.py  azcamconsole_mont4k.py  azcamserver_mont4k.py  console.py  console_mont4k.py  css.py  index_Mont4k.html  index_mont4k.html  instrument_mont4k.py  restart_cameraserver.py  rts2.py  server.py  server_mont4k.py  start_azcamconsole.py  start_azcamserver.py  start_azcamtool.py  system_config.py  telescope_big61.py  test_big61_focus.py
azcam_mont4k/common/: azcamconsole_shortcuts.py  azcamserver_shortcuts.py  cli_config.py  commands.py  focus.py  readme.txt
azcam_mont4k/common/observe/: make_gui.bat  observe.py  observe_gui_ui.py  test_script_out.txt
azcam_mont4k/common/plugins/: test_controller.py  test_exposures.py  test_reset.py
azcam_mont4k/docs/: Mont4kInfo.txt
azcam_mont4k/dspcode/dsptiming/: MakeDspTiming.bat  clocking.asm  mont4k_config0.ls
azcam_mont4k/dspcode/dsptiming_spare/: MakeDspTiming.bat  mont4k.asm  mont4k_config0.ls
azcam_mont4k/dspcode/dsputility/: SetDspPath.bat  util3.asm  util3.lod  util3.ls  util3.p0  util3.p2  util3_host.bat
azcam_mont4k/support/: AzCam Console.lnk  Exposure Status.lnk  Start Mont4k.lnk  mont4k Console.lnk
docs/: install notes.txt
support/: Exposure Status.lnk  Restart Camera Server.lnk  Startup.lnk  install.py  install_azcam-mont4k.py  monitor_time_sync.py  observe_script_example.txt  parameters_monitor_mont4k.ini  setup_time_sync.ps1  start_console_mont4k.py  start_expstatus_mont4k.py  start_monitor_mont4k.bat  start_monitor_mont4k.py  start_server.bat  start_server_css.bat  start_server_css.py  start_server_menu.py  start_server_mont4k.bat  start_server_mont4k.py  start_server_rts2.bat  start_server_rts2.py
support/Desktop/: Exposure Status.lnk  SAOImage DS9.lnk  console.lnk  expstatus.lnk  monitor mont4k.lnk  monitor.lnk  mont4k console.lnk  mont4k menu.lnk
support/datafolder/parameters/: parameters_console_mont4k.ini  parameters_monitor_mont4k.ini  parameters_server_mont4k.ini  (+1 more)
support/parameters/: parameters_server_mont4k_rts2.ini
support/templates/: fits_template_mont4k_master.txt
(+36 files in other folders)
