[project]
name = "azcam-mont4k"
version = "22.3.0"
description = "Azcam extension for Kuiper telescope Mont4k facility cameras"
license = {file ="LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
dependencies = [
    "ipython",
    "rich",
    "azcam",
]

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam-mont4k/"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_mont4k"